src/resources/css/packlink.css
/* ... */
.pl-header-wrapper {
	height: 80px;
	background-color: white;
	padding: 0 !important;
	border-bottom: 1px solid #dcdcdc;
}

.pl-header-row {
	margin: 0 !important;
}

.pl-logo-wrapper {
	width: 100%;
	padding: 20px;
	box-sizing: border-box;
}

.pl-dashboard-logo {
	width: 100%;
}

.pl-page-wrapper {
	display: flex;
	height: 100%;
}

.pl-sidebar-wrapper {
	position: relative;
	background-color: #f5f5f5;
	border-right: 1px solid #dcdcdc;
	max-width: 250px;
	width: 20%;
	height: 100%;
}

.pl-content-wrapper {
	height: 100%;
	background-color: white;
	padding-top: 20px;
	flex-grow: 1;
	position: relative;
	box-sizing: border-box;
}

.pl-content-wrapper .row {
	margin: 0 !important;
}

.pl-content-wrapper > .row {
	height: 100% !important;
	box-sizing: border-box;
}

.pl-content-wrapper-panel {
	padding: 0 0 0 20px;
	height: 100%;
	position: relative;
	box-sizing: border-box;
}

.pl-content-wrapper-panel > .row {
	height: 100%;
}

.pl-sidebar-link-wrapper {
	text-align: center;
	min-height: 50px;
	padding: 0 !important;
	cursor: pointer;
	color: #5d5d5d;
	display: flex;
	position: relative;
}

.pl-sidebar-link-wrapper * {
	pointer-events: none !important;
}

.pl-sidebar-link-wrapper-line {
	height: 29px;
	margin-bottom: 25px;
	border-bottom: 1px solid;
	display: flex;
	position: absolute;
	width: 100%;
}

.pl-sidebar-link-wrapper-inner {
	padding: 10px;
	background: whitesmoke;
	vertical-align: middle;
	margin: auto;
	position: relative;
	text-align: center;
}

.pl-sidebar-link-wrapper-inner * {
	display: inline;
}

.pl-sidebar-link-wrapper:hover, .pl-sidebar-link-wrapper.selected {
	color: #2095F2;
}

.pl-sidebar-link-wrapper-inner svg {
	position: relative;
	fill: #5d5d5d;
	margin-right: 5px;
	transform: translateY(20%);
}

.pl-sidebar-link.selected .pl-icon, .pl-sidebar-link-wrapper.selected .pl-icon,
.pl-sidebar-link-wrapper:hover .pl-icon {
	fill: #2095F2;
}

.pl-sidebar-link-wrapper .pl-icon {
	fill: #5d5d5d;
}

.pl-sidebar-line {
	margin: 0 !important;
}

.pl-sidebar-text-wrapper {
	font-size: 15px;
	text-transform: uppercase;
}

.pl-sidebar-text-wrapper svg {
	margin-right: 5px;
	transform: translateY(20%);
}

.pl-sidebar-subitem-wrapper {
	margin-bottom: 20px;
	color: #5d5d5d;
	line-height: 25px;
	padding: 0 20px 0 25px;
	cursor: pointer;
	font-size: 14px
}

.pl-sidebar-subitem-wrapper:hover {
	color: #2095F2;
}

.pl-sidebar-subitem-wrapper * {
	pointer-events: none;
}

.pl-sidebar-subitem-wrapper.selected {
	background-color: #dcdcdc;
	color: #2095F2;
}

#pl-default-warehouse-country {
	background-color: #dcdcdc !important;
}

.pl-filter-wrapper {
	-webkit-box-flex: 0;
	-ms-flex: 0 0 16.66667%;
	flex: 0 0 16.66667%;
	width: 16.66667%;
	height: 100%;
	padding-top: 5px;
	padding-right: 10px;
	float: left;
	box-sizing: border-box;
}

.pl-filter-method-tile {
	padding: 0 !important;
	font-size: 14px;
	color: #5d5d5d;
}

.pl-filter-method {
	padding: 10px 0 5px;
	font-size: 14px;
	color: #5d5d5d;
}

.pl-filter-method-item {
	padding: 0 !important;
	margin-bottom: 10px;
}

.pl-filter-method-item label {
	color: #5d5d5d;
	font-weight: normal;
}

.pl-methods-tab-wrapper {
	-webkit-box-flex: 0;
	-ms-flex: 0 0 83.33333%;
	flex: 0 0 83.33333%;
	width: 83.33333%;
	margin: 0 !important;
	padding: 0 !important;
	height: 100%;
	float: left;
}

.pl-nav-wrapper {
	padding: 0 !important;
	display: flex;
}

.pl-nav-item {
	height: 30px;
	line-height: 30px;
	padding: 0 !important;
	margin-right: 30px;
	font-size: 16px;
	font-weight: normal;
	color: #5d5d5d;
	cursor: pointer;
	border-bottom: 3px solid transparent;
}

.pl-nav-item * {
	pointer-events: none;
}

.pl-nav-item:hover {
	color: #2095F2;
}

.pl-nav-item.selected {
	color: #2095F2;
	font-weight: bold;
	border-bottom: 3px solid #2095F2;
}

.pl-num-shipping-method-results-wrapper {
	padding: 0 !important;
	height: 60px;
	line-height: 60px;
	border-bottom: 1px solid #dcdcdc;
	color: #5d5d5d;
	font-size: 12px;
}

.pl-no-shipping-services {
	text-align: center;
	z-index: 1000 !important;
	margin-top: 30px;
	font-size: 18px;
	color: black;
}

.pl-no-shipping-services.hidden {
	display: none !important;
}

.pl-table-wrapper {
	padding: 0 !important;
	height: calc(100% - 94px);
	overflow-x: hidden;
	overflow-y: auto;
}

.pl-table {
	margin: 0 !important;
	padding: 0 !important;
	width: 100%;
	border-spacing: unset !important;
}

.pl-table-header-wrapper {
	height: 60px;
	padding: 0 !important;
}

.pl-table-header-wrapper th {
	height: 60px;
	padding: 0 5px !important;
	color: #5d5d5d !important;
	font-weight: bold !important;
	background-color: white;
	position: sticky;
	top: 0;
	z-index: 400;
	vertical-align: middle !important;
	font-size: 12px;
	word-break: break-word;
	text-transform: uppercase;
}

.pl-table-row-wrapper {
	height: 75px;
	box-sizing: border-box;
}

.pl-table-row-wrapper td {
	border-top: 1px solid #dcdcdc !important;
}

.pl-table-header-wrapper > th:first-child, .pl-table-row-wrapper > td:first-child {
	border-left: 1px solid #dcdcdc !important;
}

.pl-table-header-wrapper > th:last-child, .pl-table-row-wrapper > td:last-child {
	color: #2095F2 !important;
	border-right: 1px solid #dcdcdc !important;
}

.pl-table-row-method-title h2 {
	margin: 0 0 10px 0 !important;
	padding: 0 !important;
	color: #5d5d5d !important;
	font-size: 14px;
	font-weight: bold;
}

.pl-table-row-method-title p {
	margin: 0 !important;
	padding: 0 !important;
	color: #5d5d5d !important;
	font-size: 10px;
}

.pl-table-row-method-select, .pl-table-row-method-select *, .pl-table-row-method-logo,
.pl-table-row-method-delivery-type, .pl-table-row-method-type,
.pl-table-header-select, .pl-table-header-transit, .pl-table-header-carrier,
.pl-table-header-type, .pl-table-header-origin, .pl-table-header-destination {
	text-align: center !important;
}

.pl-tbody tr:last-child td {
	border-bottom: 1px solid #dcdcdc !important;
}

.pl-tbody tr,
.pl-tbody td {
	border-collapse: separate;
}

.pl-price-indicator {
	display: none;
}
/* ... */

